--- a/package.json
+++ b/package.json
@@ -1,34 +1,28 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "@material-ui/core": "^1.1.0",
-    "@material-ui/icons": "^1.1.0",
-    "@types/graphql": "^0.13.1",
-    "@types/prop-types": "^15.5.3",
-    "@types/react-helmet": "^5.0.6",
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-plugin-typescript": "^1.4.20",
-    "react-helmet": "^5.2.0",
-    "tslint": "^5.10.0",
-    "tslint-config-evolvator": "github:Evolvator/tslint-config-evolvator",
-    "typescript": "^2.8.3"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
+  "name": "ss",
+  "private": true,
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "meteor npm i && meteor run"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.42",
+    "@material-ui/core": "^1.2.0",
+    "@material-ui/icons": "^1.1.0",
+    "@types/meteor": "^1.4.15",
+    "@types/react": "^16.3.16",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-router": "^4.0.26",
+    "@types/react-router-dom": "^4.2.7",
+    "meteor-node-stubs": "^0.3.2",
+    "normalize.css": "^8.0.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "prettier": "^1.12.0"
+    "tslint": "^5.10.0",
+    "tslint-config-evolvator": "github:Evolvator/tslint-config-evolvator",
+    "typescript": "^2.9.1"
   }
 }
