--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^1.2.0",
     "@material-ui/icons": "^1.1.0",
     "@types/meteor": "^1.4.15",
+    "@types/node": "^10.3.0",
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
     "@types/react-router": "^4.0.26",
