--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-input-mask": "^2.0.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-text-mask": "^5.4.2",
     "simpl-schema": "^1.5.0",
     "uniforms": "^1.25.0-rc.3",
     "uniforms-material": "^1.25.0-rc.3"
