--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@types/react-dom": "^16.0.5",
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
+    "country-telephone-data": "^0.5.5",
     "meteor-node-stubs": "^0.3.2",
     "normalize.css": "^8.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-input-mask": "^2.0.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-text-mask": "^5.4.2",
