--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
-  "name": "ss",
+  "name": "meteor-ts-react-ssr-mui-blueprint",
+  "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "meteor npm i && meteor run"
-  },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
-    "@material-ui/core": "^1.2.0",
-    "@material-ui/icons": "^1.1.0",
-    "@types/meteor": "^1.4.15",
-    "@types/node": "^10.3.0",
-    "@types/react": "^16.3.16",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-router": "^4.0.26",
-    "@types/react-router-dom": "^4.2.7",
-    "country-telephone-data": "^0.5.5",
-    "meteor-node-stubs": "^0.3.2",
+    "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
+    "meteor-node-stubs": "^0.4.1",
     "normalize.css": "^8.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-jss": "^8.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-text-mask": "^5.4.2",
     "simpl-schema": "^1.5.0",
     "uniforms": "^1.25.0-rc.3",
     "uniforms-material": "^1.25.0-rc.3"
   },
   "devDependencies": {
     "tslint": "^5.10.0",
-    "tslint-config-evolvator": "github:Evolvator/tslint-config-evolvator",
-    "typescript": "^2.9.1"
+    "tslint-config-airbnb": "^5.11.1",
+    "typescript": "^3.2.4",
+    "@types/meteor": "^1.4.15",
+    "@types/node": "^10.3.0",
+    "@types/react": "^16.3.16",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-router": "^4.0.26",
+    "@types/react-router-dom": "^4.2.7"
   }
 }
