--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "normalize.css": "^8.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
     "react-jss": "^8.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
