--- a/package.json
+++ b/package.json
@@ -1,32 +1,66 @@
 {
-  "name": "meteor-ts-react-ssr-mui-blueprint",
+  "name": "ssdt-billing",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start": "meteor run"
+  },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/react-router": "latest",
+    "@types/react-router-dom": "4.3.1",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.4",
+    "i18n": "^0.8.3",
+    "jss": "^9.8.7",
+    "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
+    "meteor-rxjs": "^0.4.14",
+    "moment": "^2.23.0",
     "normalize.css": "^8.0.0",
     "react": "^16.4.1",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-apollo": "^2.4.1",
+    "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-jss": "^8.6.1",
+    "react-resize-detector": "3.4.0",
+    "react-reveal": "^1.2.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-scroll": "0.4.4",
+    "react-router-scroll-4": "1.0.0-beta.2",
+    "react-scripts-ts": "^3.1.0",
+    "react-scroll-parallax": "1.3.5",
+    "react-scrollchor": "^6.0.0",
+    "react-sticky": "^6.0.3",
+    "react-swipeable-views": "^0.13.0",
+    "reactive-graphql": "^3.0.0",
+    "rxjs": "^6.4.0",
     "simpl-schema": "^1.5.0",
+    "tslint-config-evolvator": "0.0.0",
     "uniforms": "^1.25.0-rc.3",
     "uniforms-material": "^1.25.0-rc.3"
   },
   "devDependencies": {
-    "tslint": "^5.10.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.2.4",
-    "@types/meteor": "^1.4.15",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@types/jest": "^23.3.13",
+    "@types/meteor": "^1.4.27",
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
+    "@types/react-resize-detector": "3.1.0",
     "@types/react-router": "^4.0.26",
-    "@types/react-router-dom": "^4.2.7"
+    "@types/react-router-dom": "^4.2.7",
+    "tslint": "^5.10.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "typescript": "^3.2.4"
   }
 }
