--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "sourceMap": true,
+    "noImplicitAny": true,
     "module": "commonjs",
     "target": "es2015",
     "jsx": "react",
