--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@babel/runtime": "^7.0.0-beta.42",
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/react-router": "latest",
-    "@types/react-router-dom": "4.3.1",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-ddp": "^2.0.0",
+    "apollo-link-http": "^1.5.12",
+    "apollo-link-reactive-schema": "^2.1.2",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@types/jest": "^23.3.13",
+    "@types/lodash": "^4.14.122",
     "@types/meteor": "^1.4.27",
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.16",
