--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
+    "@bit/ivansglazunov.metre.firstname": "0.0.1",
+    "@bit/ivansglazunov.metre.userposts": "0.0.0",
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
     "apollo-cache-inmemory": "^1.5.1",
