--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ssdt-billing",
+  "name": "metre",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
-    "@bit/ivansglazunov.metre.firstname": "0.0.1",
-    "@bit/ivansglazunov.metre.userposts": "0.0.0",
+    "@bit/ivansglazunov.metre.firstname": "0.0.3",
+    "@bit/ivansglazunov.metre.userposts": "0.0.2",
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
     "apollo-cache-inmemory": "^1.5.1",
