--- a/package.json
+++ b/package.json
@@ -6,64 +6,56 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.42",
+    "@babel/runtime": "^7.4.3",
     "@bit/ivansglazunov.metre.firstname": "0.0.3",
     "@bit/ivansglazunov.metre.userposts": "0.0.2",
-    "@material-ui/core": "^3.9.1",
+    "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-client": "^2.5.1",
-    "apollo-link-ddp": "^2.0.0",
-    "apollo-link-http": "^1.5.12",
-    "apollo-link-reactive-schema": "^2.1.2",
-    "graphql": "^14.1.1",
-    "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.4",
+    "create-react-class": "^15.6.3",
     "i18n": "^0.8.3",
     "jss": "^9.8.7",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
-    "meteor-rxjs": "^0.4.14",
-    "moment": "^2.23.0",
-    "normalize.css": "^8.0.0",
-    "react": "^16.4.1",
+    "moment": "^2.24.0",
+    "normalize.css": "^8.0.1",
+    "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-apollo": "^2.4.1",
+    "react-addons-pure-render-mixin": "^15.6.2",
     "react-container-dimensions": "^1.4.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-jss": "^8.6.1",
-    "react-resize-detector": "3.4.0",
+    "react-meteor-data": "^0.2.11",
+    "react-resize-detector": "4.0.5",
     "react-reveal": "^1.2.2",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-router-scroll": "0.4.4",
     "react-router-scroll-4": "1.0.0-beta.2",
     "react-scripts-ts": "^3.1.0",
-    "react-scroll-parallax": "1.3.5",
+    "react-scroll-parallax": "2.1.0",
     "react-scrollchor": "^6.0.0",
     "react-sticky": "^6.0.3",
-    "react-swipeable-views": "^0.13.0",
-    "reactive-graphql": "^3.0.0",
-    "rxjs": "^6.4.0",
-    "simpl-schema": "^1.5.0",
+    "react-swipeable-views": "^0.13.1",
+    "reactive-graphql": "^3.0.2",
+    "simpl-schema": "^1.5.5",
     "tslint-config-evolvator": "0.0.0",
-    "uniforms": "^1.25.0-rc.3",
-    "uniforms-material": "^1.25.0-rc.3"
+    "uniforms": "^1.31.1",
+    "uniforms-material": "^1.31.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@types/jest": "^23.3.13",
-    "@types/lodash": "^4.14.122",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@types/jest": "^24.0.11",
+    "@types/lodash": "^4.14.123",
     "@types/meteor": "^1.4.27",
-    "@types/node": "^10.3.0",
-    "@types/react": "^16.3.16",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-resize-detector": "3.1.0",
-    "@types/react-router": "^4.0.26",
-    "@types/react-router-dom": "^4.2.7",
-    "tslint": "^5.10.0",
+    "@types/node": "^11.13.2",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-resize-detector": "4.0.1",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
+    "tslint": "^5.15.0",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.2.4"
+    "typescript": "^3.4.2"
   }
 }
