--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.3",
-    "@bit/ivansglazunov.metre.firstname": "0.0.3",
-    "@bit/ivansglazunov.metre.userposts": "0.0.2",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "async": "^2.6.2",
+    "bcrypt": "^3.0.5",
     "create-react-class": "^15.6.3",
     "i18n": "^0.8.3",
     "jss": "^9.8.7",
