--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/runtime": "^7.4.3",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@types/mocha": "^5.2.6",
     "async": "^2.6.2",
     "bcrypt": "^3.0.5",
     "create-react-class": "^15.6.3",
