--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@types/chai": "^4.1.7",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
     "@types/meteor": "^1.4.27",
@@ -55,6 +56,7 @@
     "@types/react-resize-detector": "4.0.1",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
+    "chai": "^4.2.0",
     "tslint": "^5.15.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.4.2"
