--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "dev-debug": "meteor debug --inspect-brk=5959"
+    "start-debug": "meteor debug --inspect-brk=5959",
+    "test": "TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --raw-logs",
+    "test-debug": "meteor test --driver-package meteortesting:mocha --raw-logs --inspect-brk=5959"
   },
   "dependencies": {
     "@babel/runtime": "^7.4.3",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "@types/mocha": "^5.2.6",
     "async": "^2.6.2",
     "bcrypt": "^3.0.5",
+    "chai": "^4.2.0",
     "create-react-class": "^15.6.3",
     "i18n": "^0.8.3",
     "jss": "^9.8.7",
@@ -26,6 +28,7 @@
     "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-hotkeys": "^1.1.4",
     "react-jss": "^8.6.1",
     "react-meteor-data": "^0.2.11",
     "react-resize-detector": "4.0.5",
@@ -50,13 +53,16 @@
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
     "@types/meteor": "^1.4.27",
-    "@types/node": "^11.13.2",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.5",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.3",
     "@types/react-resize-detector": "4.0.1",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
-    "chai": "^4.2.0",
+    "chromedriver": "^73.0.0",
+    "mocha": "^6.1.3",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "tslint": "^5.15.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.4.2"
