react-table sort and filter

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "async": "^2.6.2",
     "bcrypt": "^3.0.5",
     "chai": "^4.2.0",
+    "chance": "^1.0.18",
     "create-react-class": "^15.6.3",
     "i18n": "^0.8.3",
     "jss": "^9.8.7",
@@ -30,6 +31,7 @@
     "react-helmet": "^5.2.0",
     "react-hotkeys": "^1.1.4",
     "react-jss": "^8.6.1",
+    "react-loadable": "^5.5.0",
     "react-meteor-data": "^0.2.11",
     "react-resize-detector": "4.0.5",
     "react-reveal": "^1.2.2",
@@ -42,6 +44,7 @@
     "react-scrollchor": "^6.0.0",
     "react-sticky": "^6.0.3",
     "react-swipeable-views": "^0.13.1",
+    "react-table": "^6.9.2",
     "simpl-schema": "^1.5.5",
     "tslint-config-evolvator": "0.0.0",
     "uniforms": "^1.31.1",
