--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18n": "^0.8.3",
     "jss": "^9.8.7",
     "lodash": "^4.17.11",
+    "mathjs": "^5.9.0",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
@@ -46,6 +47,7 @@
     "react-swipeable-views": "^0.13.1",
     "react-table": "^6.9.2",
     "simpl-schema": "^1.5.5",
+    "string-hash": "^1.1.3",
     "tslint-config-evolvator": "0.0.0",
     "uniforms": "^1.31.1",
     "uniforms-material": "^1.31.1"
