--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "meteor run --settings settings.json",
     "start-debug": "meteor debug --inspect-brk=5959",
     "test": "TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --raw-logs",
     "test-debug": "meteor test --driver-package meteortesting:mocha --raw-logs --inspect-brk=5959"
@@ -22,6 +22,7 @@
     "lodash": "^4.17.11",
     "mathjs": "^5.9.0",
     "meteor-node-stubs": "^0.4.1",
+    "mingo": "^2.3.5",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
@@ -59,7 +60,7 @@
     "@types/lodash": "^4.14.123",
     "@types/meteor": "^1.4.27",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.5",
+    "@types/node": "^11.13.10",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.3",
     "@types/react-resize-detector": "4.0.1",
