--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ typings/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# desktop
+version.desktop
+.desktop
+.desktop-installer
