--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "meteor run --settings settings.json",
     "start-debug": "meteor debug --inspect-brk=5959",
     "test": "TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --raw-logs",
-    "test-debug": "meteor test --driver-package meteortesting:mocha --raw-logs --inspect-brk=5959"
+    "test-debug": "meteor test --driver-package meteortesting:mocha --raw-logs --inspect-brk=5959",
+    "desktop": "meteor-desktop"
   },
   "dependencies": {
     "@babel/runtime": "^7.4.3",
@@ -67,6 +68,9 @@
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
     "chromedriver": "^73.0.0",
+    "electron": "2.0.10",
+    "electron-builder": "20.28.4",
+    "meteor-desktop": "^2.0.0",
     "mocha": "^6.1.3",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "tslint": "^5.15.0",
