--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chance": "^1.0.18",
     "create-react-class": "^15.6.3",
     "i18n": "^0.8.3",
+    "jsonpack": "^1.1.5",
     "jss": "^9.8.7",
     "lodash": "^4.17.11",
     "mathjs": "^5.9.0",
@@ -26,6 +27,7 @@
     "mingo": "^2.3.5",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
+    "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-pure-render-mixin": "^15.6.2",
