--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/runtime": "^7.4.3",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "array-move": "^2.1.0",
     "async": "^2.6.2",
     "bcrypt": "^3.0.5",
     "chai": "^4.2.0",
@@ -47,6 +48,7 @@
     "react-scripts-ts": "^3.1.0",
     "react-scroll-parallax": "2.1.0",
     "react-scrollchor": "^6.0.0",
+    "react-sortable-hoc": "^1.9.1",
     "react-sticky": "^6.0.3",
     "react-swipeable-views": "^0.13.1",
     "react-table": "^6.9.2",
@@ -69,6 +71,7 @@
     "@types/react-resize-detector": "4.0.1",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-sortable-hoc": "^0.6.5",
     "chromedriver": "^73.0.0",
     "electron": "2.0.10",
     "electron-builder": "20.28.4",
