LinearProgress for async rounting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
     "noImplicitAny": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
