--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "meteor run --settings settings.json",
     "start-debug": "meteor debug --inspect-brk=5959",
-    "test": "TEST_WATCH=1 meteor test --driver-package meteortesting:mocha --raw-logs",
+    "test": "spacejam test --driver-package meteortesting:mocha --raw-logs",
     "test-debug": "meteor test --driver-package meteortesting:mocha --raw-logs --inspect-brk=5959",
     "desktop": "meteor-desktop"
   },
@@ -78,6 +78,7 @@
     "meteor-desktop": "^2.0.0",
     "mocha": "^6.1.3",
     "selenium-webdriver": "^4.0.0-alpha.1",
+    "spacejam": "^1.6.1",
     "tslint": "^5.15.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.4.2"
