samovar temporary code

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "meteor run --settings settings.json",
     "start-debug": "meteor debug --inspect-brk=5959",
-    "test": "meteor test --driver-package meteortesting:mocha --raw-logs",
+    "test": "TEST_WATCH=0 meteor test --driver-package meteortesting:mocha --raw-logs",
     "test-debug": "meteor test --driver-package meteortesting:mocha --raw-logs --inspect-brk=5959",
     "desktop": "meteor-desktop"
   },
@@ -15,12 +15,15 @@
     "@material-ui/icons": "^3.0.2",
     "array-move": "^2.1.0",
     "async": "^2.6.2",
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chance": "^1.0.18",
     "create-react-class": "^15.6.3",
     "i18n": "^0.8.3",
     "jsonpack": "^1.1.5",
+    "jsonschema": "^1.2.4",
     "jss": "^9.8.7",
     "lodash": "^4.17.11",
     "mathjs": "^5.10.0",
