--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,7 @@
-{ "public": { "server": false } }
+{
+  "name": "metre",
+  "version": "0.0.0",
+  "packageName": "metre",
+  "desktopHCP": false,
+  "public": { "server": false }
+}
