--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/react-sortable-hoc": "^0.6.5",
     "chromedriver": "^74.0.0",
+    "debug": "^4.1.1",
     "electron": "5.0.1",
     "electron-builder": "20.40.2",
     "meteor-desktop": "^2.0.0",
