--- a/package.json
+++ b/package.json
@@ -48,17 +48,11 @@
     "react-router-scroll": "0.4.4",
     "react-router-scroll-4": "1.0.0-beta.2",
     "react-scripts-ts": "^3.1.0",
-    "react-scroll-parallax": "2.1.2",
-    "react-scrollchor": "^6.0.0",
     "react-sortable-hoc": "^1.9.1",
-    "react-sticky": "^6.0.3",
-    "react-swipeable-views": "^0.13.3",
     "react-table": "^6.10.0",
     "simpl-schema": "^1.5.5",
     "string-hash": "^1.1.3",
-    "tslint-config-evolvator": "0.0.0",
-    "uniforms": "^1.31.1",
-    "uniforms-material": "^1.31.1"
+    "tslint-config-evolvator": "0.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
