--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.4",
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^4.0.0-rc.0",
     "array-move": "^2.1.0",
     "async": "^2.6.2",
     "axios": "^0.18.0",
