--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-jss": "^8.6.1",
     "react-loadable": "^5.5.0",
     "react-meteor-data": "^0.2.11",
+    "react-meteor-hooks": "^0.3.1",
     "react-resize-detector": "4.1.3",
     "react-reveal": "^1.2.2",
     "react-router": "^5.0.0",
