--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@material-ui/styles": "^4.0.0-rc.0",
     "array-move": "^2.1.0",
     "async": "^2.6.2",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chance": "^1.0.18",
+    "cookie-parser": "^1.4.4",
     "create-react-class": "^15.6.3",
+    "express-session": "^1.16.2",
     "i18n": "^0.8.3",
     "jsonpack": "^1.1.5",
     "jsonschema": "^1.2.4",
@@ -29,7 +31,10 @@
     "meteor-node-stubs": "^0.4.1",
     "mingo": "^2.3.5",
     "moment": "^2.24.0",
+    "nocache": "^2.1.0",
     "normalize.css": "^8.0.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
