--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "desktop": "meteor-desktop"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.4",
-    "@material-ui/core": "^4.0.0-rc.0",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^4.0.0-rc.0",
+    "@babel/runtime": "^7.4.5",
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
+    "@material-ui/styles": "^4.1.1",
     "array-move": "^2.1.0",
-    "async": "^2.6.2",
-    "axios": "^0.18.1",
+    "async": "^3.0.1",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
@@ -27,7 +27,7 @@
     "jsonschema": "^1.2.4",
     "jss": "^9.8.7",
     "lodash": "^4.17.11",
-    "mathjs": "^5.10.0",
+    "mathjs": "^6.0.2",
     "meteor-node-stubs": "^0.4.1",
     "mingo": "^2.3.5",
     "moment": "^2.24.0",
@@ -35,23 +35,23 @@
     "normalize.css": "^8.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "query-string": "^6.5.0",
+    "query-string": "^6.8.1",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.8.6",
-    "react-dropzone": "^10.1.4",
+    "react-dropzone": "^10.1.5",
     "react-helmet": "^5.2.1",
     "react-hotkeys": "^1.1.4",
     "react-jss": "^8.6.1",
     "react-loadable": "^5.5.0",
     "react-meteor-data": "^0.2.11",
     "react-meteor-hooks": "^0.3.1",
-    "react-resize-detector": "4.1.3",
+    "react-resize-detector": "4.2.0",
     "react-reveal": "^1.2.2",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-router-scroll": "0.4.4",
     "react-router-scroll-4": "1.0.0-beta.2",
     "react-scripts-ts": "^3.1.0",
@@ -64,26 +64,26 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@types/chai": "^4.1.7",
-    "@types/jest": "^24.0.12",
-    "@types/lodash": "^4.14.126",
+    "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.134",
     "@types/meteor": "^1.4.28",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.8.17",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.8",
+    "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "@types/react-resize-detector": "4.0.1",
-    "@types/react-router": "^5.0.0",
-    "@types/react-router-dom": "^4.3.3",
+    "@types/react-router": "^5.0.2",
+    "@types/react-router-dom": "^4.3.4",
     "@types/react-sortable-hoc": "^0.6.5",
-    "chromedriver": "^74.0.0",
+    "chromedriver": "^75.0.0",
     "debug": "^4.1.1",
-    "electron": "5.0.1",
-    "electron-builder": "20.40.2",
+    "electron": "5.0.4",
+    "electron-builder": "20.44.4",
     "mocha": "^6.1.4",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "spacejam": "^1.6.1",
-    "tslint": "^5.16.0",
+    "tslint": "^5.18.0",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.2"
   }
 }
