--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-scripts-ts": "^3.1.0",
     "react-sortable-hoc": "^1.9.1",
     "react-table": "^6.10.0",
+    "recharts": "^1.6.2",
     "simpl-schema": "^1.5.5",
     "string-hash": "^1.1.3",
     "tslint-config-evolvator": "0.0.0"
