--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "recharts": "^1.6.2",
     "simpl-schema": "^1.5.5",
     "string-hash": "^1.1.3",
+    "string-to-color": "^2.1.1",
     "tslint-config-evolvator": "0.0.0"
   },
   "devDependencies": {
